# url_shortener

./: README.md  pyproject.toml
src/shortening_service/: apps.py  models.py  urls.py  views.py
src/shortening_service/migrations/: 0001_initial.py
src/shortening_service/static/shortening_service/: style.css
src/shortening_service/templates/shortening_service/: index.html
src/url_shortener/: settings.py  urls.py
