[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["Logan Cox <mail@logan-cox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
django-admin = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
